--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="header-content-container">
 		<span class="header-logo"><a href="#">Device</a></span>
 		<div class="header-nav-container">
-		<form method="post" name="search">
+		<form method="post" name="search" class="header-search">
 				<input type="text" placeholder="Поиск по сайту">
 			</form>
 			<nav class="header-user-nav">
@@ -24,20 +24,37 @@
 		    </nav>
 		    </div>
 		    <div class="header-catalog-container">
-		<p class="catalog">Каталог товаров</p>
+		<div>
+			<p class="catalog">Каталог товаров</p>
+			<ul class="catalog-popup">
+				<li>
+					<a href="#">Виртуальная реальность</a>
+					<a href="#">Моноподы для селфи</a>
+					<a href="#">Экшн-камеры</a>
+				</li>
+				<li>
+					<a href="#">Фитнес-браслеты</a>
+					<a href="#">Умные часы</a>
+				</li>
+				<li>
+					<a href="#">Квадрокоптеры</a>
+				</li>
+			</ul>
+		</div>
 		<ul class="info-header">
 			<li class="info-item__delivery"><a href="#">Доставка</a></li>
 			<li class="info-item__warranty"><a href="#">Гарантия</a></li>
 			<li class="info-item__contacts"><a href="#">Контакты</a></li>
 		</ul>
-
+		<div class="line-decoration"></div>
 		</div>
 	</header>
 	</div>
 	<div class="container">
 		<img src="img/slider-1.png" width="384" height="486" alt="Селфи-моноподы" class="slider-one-pic">
 			<article class="slider">
-				<h3>Делай селфи, как Бен Стиллер!</h3>
+				<h3>Делай селфи, <br> как Бен Стиллер!</h3>
+				<span class="header-number">01</span>
 				<p class="hit-product__description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм</p>
 				<a href="#" class="hit-product__page-link">Подробнее</a>
 				<input type="radio" class="slider-toggle">
@@ -62,20 +79,12 @@
 		<section class="product-categories">
 			<div class="container">
 			<ul>
-				<li class="product-pic"><img src="img/vr-icon.png" alt="VR-очки"></li>
-				<li class="product-pic"><img src="img/selfie-stick-icon.png" alt="Селфи-моноподы"></li>
-				<li class="product-pic"><img src="img/camera-icon.png" alt="Камеры"></li>
-				<li class="product-pic"><img src="img/fitness-braclet-icon.png" alt="Фитнес-браслеты"></li>
-				<li class="product-pic"><img src="img/watches-icon.png" alt="Смарт-часы"></li>
-				<li class="product-pic"><img src="img/quadrocopter-icon.png" alt="Квадрокоптеры"></li>
-			</ul>
-			<ul>
-				<li class="product-category-name"><a href="#">Виртуальная реальность</a></li>
-				<li class="product-category-name"><a href="#">Моноподы для селфи</a></li>
-				<li class="product-category-name"><a href="#">Экшн-камеры</a></li>
-				<li class="product-category-name"><a href="#">Фитнес-браслеты</a></li>
-				<li class="product-category-name"><a href="#">Умные часы</a></li>
-				<li class="product-category-name"><a href="#">Квадрокоптеры</a></li>
+				<li class="product-pic"><img src="img/vr-icon.png" alt="VR-очки"><a>Виртуальная реальность</a></li>
+				<li class="product-pic"><img src="img/selfie-stick-icon.png" alt="Селфи-моноподы"><a href="#">Моноподы для селфи</a></li>
+				<li class="product-pic"><img src="img/camera-icon.png" alt="Камеры"><a href="#">Экшн-камеры</a></li>
+				<li class="product-pic"><img src="img/fitness-braclet-icon.png" alt="Фитнес-браслеты"><a href="#">Фитнес-браслеты</a></li>
+				<li class="product-pic"><img src="img/watches-icon.png" alt="Смарт-часы"><a href="#">Умные часы</a></li>
+				<li class="product-pic"><img src="img/quadrocopter-icon.png" alt="Квадрокоптеры"><a href="#">Квадрокоптеры</a></li>
 			</ul>
 			</div>
 		</section>
@@ -91,10 +100,10 @@
 					</ul>
 				</div>
 				<div class="service-info__description--container">
-			<h3>Доставка</h3>
-			<p class="service-info__description">
-				Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
-			</p>
+						<h3>Доставка</h3>
+						<p class="service-info__description">
+							Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -109,11 +118,13 @@
 			</div>
 		</article>
 
-		<section class="features">
-			<div class="container">
+		<section class="features container">
+			<div class="about-us__container">
 				<h3>О нас</h3>
 				<p>
 					Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
+				</p>
+				<p>
 					Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
 				</p>
 				<ul class="delivery-companies">
@@ -121,47 +132,50 @@
 					<li>Автотрейдинг</li>
 					<li>ЖелДорЭкспедиция</li>
 				</ul>
-			<a href="" class="more-info about-us">Подробнее о нас</a>
+			<a href="#" class="more-info about-us">Подробнее о нас</a>
 			</div>
-		</section>
-		<section class="contacts">
-			<div class="container">
+			<div class="contacts__container">
 			<h3>Контакты</h3>
 			<p>
-				Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
+				Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность по80pxкупки. Всякое бывает.
 			</p>
 			<img src="img/map.png" alt="Карта"><br>
-		  <a href="" class="more-info dm">Напишите нам</a>
+		  <a href="#" class="more-info dm">Напишите нам</a>
 		  </div>
 		</section>
 	</main>
 	<footer class="main-footer">
 		<div class="container">
-		<span class="footer-logo">Device</span>
+			<div class="logo-login__container">
+				<span class="footer-logo">Device</span>
 
-			<nav class="footer-user-nav">
-				<ul>
-					<li class="footer-nav-item__"><a href="">Войти</a></li>
-					<li class="footer-nav-item__"><a href="">Сравнить</a></li>
-					<li class="footer-nav-item__"><a href="">Корзина</a></li>
+					<nav class="footer-user-nav">
+						<ul>
+							<li class="footer-nav-item__"><a href="">Войти</a></li>
+							<li class="footer-nav-item__"><a href="">Сравнить</a></li>
+							<li class="footer-nav-item__"><a href="">Корзина</a></li>
+						</ul>
+					</nav>
+			</div>
+			<div class="address-info-tel__container">
+				<p class="address">г. Москва, ул. Строителей, 15</p>
+					<nav class="info-footer">
+						<ul>
+							<li class="info-item__delivery"><a href="#">Доставка</a></li>
+							<li class="info-item__warranty"><a href="#">Гарантия</a></li>
+							<li class="info-item__contacts"><a href="#">Контакты</a></li>
+						</ul>
+					</nav>
+				<span class="telephone">Тел.: +7(495) 495-95-95</span>
+			</div>
+			<div class="social-logo__container">
+				<ul class="footer-social">
+					<li class="social__facebook"><a href="facebook.com">Facebook</a></li>
+					<li class="social__instagram"><a href="">Instagram</a></li>
+					<li class="social__twitter"><a href="">Twitter</a></li>
 				</ul>
-			</nav>
-
-			<p class="address">г. Москва, ул. Строителей, 15</p>
-			<nav class="info-footer">
-				<ul>
-					<li class="info-item__delivery"><a href="#">Доставка</a></li>
-					<li class="info-item__warranty"><a href="#">Гарантия</a></li>
-					<li class="info-item__contacts"><a href="#">Контакты</a></li>
-				</ul>
-			</nav>
-			<span class="telephone">Тел.: +7(495) 495-95-95</span>
-			<ul class="footer-social">
-				<li class="social__facebook"><a href="facebook.com">Facebook</a></li>
-				<li class="social__instagram"><a href="">Instagram</a></li>
-				<li class="social__twitter"><a href="">Twitter</a></li>
-			</ul>
-			<img src="img/academy-logo.png" alt="Логотип академии">
+				<img src="img/academy-logo.png" alt="Логотип академии">
+				</div>
 			</div>
 	</footer>
 </body>
